tests/paczka1/fuzzy1/30097628.err
Error in line 4: M3ZrnB7SIp S721 10,9
Error in line 10: M3ZrnB7SIp S501 63,47
Error in line 6: TgZmsPyYwM A409 68,1
Error in line 9: olwz4s S590 54,5
Error in line 5: M3ZrnB7SIp S501 56,9
Error in line 32: TgZmsPyYwM A409 -1,3
Error in line 11: WVv26TOs A409 3,2
Error in line 33: WVv26TOs S501 11,9
Error in line 25: TgZmsPyYwM A409 11,4
Error in line 34: WVv26TOs S590 9,3
